trunk/Archive2/e4/038858d217eab8/output
main.cpp:6:10: error: too few template arguments for class template 'array'
    std::array<int> numbers {2, 4, 6, 8};
         ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/array:81:12: note: template is declared here
    struct array
           ^
1 error generated.
